--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+    <h1>This is an added text to test.</h1>
     <div class="basket-container">
         <div class="container">
             <h1>HOME</h1>
